@@ -5,6 +5,7 @@ ChangeLog
  * 11May2022 Fixes incorrect sequence of initialization of CUDA instrumentation components
  * 28Mar2022 Fixes check for optional headers in AX_FIND_INSTALLATION
  * 31Mar2022 Adds PAPI linker flags to parallel merger and sets merger default synchronization to by_node
+ + 08Apr2022 Adds --enable-riscv configure option so ARCH_RISCV64 is enabled and PC is correctly retrieved
  * 23Mar2022 Applies corrections in MPI_Comm_spawn support
  * 08Mar2022 Reworks synchronization methods to work with and among multiple apps
  + 08Mar2022 Adds option to disable rpath per dependency
